<resources>
    <string name="app_name">Tabler Icons</string>
    <string name="action_copy">Copy</string>
    <string name="action_close">Close</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_share_via">Share via…</string>
    <string name="action_rate">Rate</string>
    <string name="action_apps">More apps</string>
    <string name="action_github">GitHub</string>
    <string name="action_issues">Issues</string>
    <string name="action_settings">Settings</string>
    <string name="settings_dynamic_colors">Dynamic colors</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_day">Day</string>
    <string name="settings_theme_night">Night</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_battery">Battery</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_en" translatable="false">English</string>
    <string name="settings_language_fa" translatable="false">فارسی</string>
    <string name="about_library_version">Tabler Icons Library v%1$s</string>
    <string name="about_library_base_version">Based on Tabler Icons v%1$s</string>
    <string name="message_copy_success">Text copied to clipboard.</string>
    <string name="message_share_failed">No apps can perform this action!</string> <!-- TODO: Rename to a clear name -->
    <string name="error_nothing_found">Nothing found!</string>
</resources>