<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:gravity="center"
            android:text="@string/action_settings"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/dynamic_colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/settings_dynamic_colors"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/settings_theme"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/theme_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_spacing"
                android:gravity="center"
                android:paddingHorizontal="@dimen/margin_horizontal"
                app:checkedButton="@id/theme_day"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/theme_day"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme_day"
                    app:icon="@drawable/ic_sun" />

                <Button
                    android:id="@+id/theme_night"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme_night"
                    app:icon="@drawable/ic_moon_stars" />

                <Button
                    android:id="@+id/theme_system"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme_system"
                    app:icon="@drawable/ic_brightness_half" />

                <Button
                    android:id="@+id/theme_battery"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme_battery"
                    app:icon="@drawable/ic_recharging" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/settings_language"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/language_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_spacing"
            android:gravity="center"
            android:paddingHorizontal="@dimen/margin_horizontal"
            app:checkedButton="@id/language_en"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/language_en"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:fontFamily="@font/open_sans"
                android:text="@string/settings_language_en" />

            <Button
                android:id="@+id/language_fa"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:fontFamily="@font/vazirmatn"
                android:text="@string/settings_language_fa" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_spacing" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_vertical" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_vertical" />

        <LinearLayout
            android:id="@+id/github_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/githubButton"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_spacing"
                android:layout_weight="1"
                android:text="@string/action_github"
                app:icon="@drawable/ic_brand_github"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/margin_spacing" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/issuesButton"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_issues"
                app:icon="@drawable/ic_bug"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/margin_spacing" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_spacing" />

        <LinearLayout
            android:id="@+id/market_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rateButton"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_spacing"
                android:layout_weight="1"
                android:text="@string/action_rate"
                app:icon="@drawable/ic_message"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/margin_spacing" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appsButton"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_apps"
                app:icon="@drawable/ic_apps"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/margin_spacing" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_vertical" />

        <TextView
            android:id="@+id/about_library_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

        <TextView
            android:id="@+id/about_base_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Material3.LabelSmall" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
