<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/icon_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drag_handle">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp">

                    <ImageView
                        android:id="@+id/icon_8"
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 16dp"
                        tools:src="@drawable/ic_brand_github" />

                    <ImageView
                        android:id="@+id/icon_16"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 16dp"
                        tools:src="@drawable/ic_brand_github" />

                    <ImageView
                        android:id="@+id/icon_24"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 24dp"
                        tools:src="@drawable/ic_brand_github" />

                    <ImageView
                        android:id="@+id/icon_32"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 32dp"
                        tools:src="@drawable/ic_brand_github" />

                    <ImageView
                        android:id="@+id/icon_40"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 40dp"
                        tools:src="@drawable/ic_brand_github" />

                    <ImageView
                        android:id="@+id/icon_48"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 48dp"
                        tools:src="@drawable/ic_brand_github" />

                    <ImageView
                        android:id="@+id/icon_56"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 56dp"
                        tools:src="@drawable/ic_brand_github" />

                    <ImageView
                        android:id="@+id/icon_64"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 64dp"
                        tools:src="@drawable/ic_brand_github" />

                    <ImageView
                        android:id="@+id/icon_72"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 72dp"
                        tools:src="@drawable/ic_brand_github" />

                    <ImageView
                        android:id="@+id/icon_80"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="16dp"
                        android:tooltipText="Size: 80dp"
                        tools:src="@drawable/ic_brand_github" />

                </LinearLayout>

            </HorizontalScrollView>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/icon_name_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/icon_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/button_copy_icon_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="BrandGithub" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_copy_icon_name"
                        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tooltipText="@string/action_copy"
                        app:icon="@drawable/ic_copy"
                        app:layout_constraintBottom_toBottomOf="@id/icon_name"
                        app:layout_constraintEnd_toStartOf="@id/button_share_icon_name"
                        app:layout_constraintTop_toTopOf="@id/icon_name" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_share_icon_name"
                        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tooltipText="@string/action_share"
                        app:icon="@drawable/ic_share"
                        app:layout_constraintBottom_toBottomOf="@id/icon_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/icon_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/icon_res_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/button_copy_icon_res_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="BrandGithub" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_copy_icon_res_name"
                        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tooltipText="@string/action_copy"
                        app:icon="@drawable/ic_copy"
                        app:layout_constraintBottom_toBottomOf="@id/icon_res_name"
                        app:layout_constraintEnd_toStartOf="@id/button_share_icon_res_name"
                        app:layout_constraintTop_toTopOf="@id/icon_res_name" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_share_icon_res_name"
                        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tooltipText="@string/action_share"
                        app:icon="@drawable/ic_share"
                        app:layout_constraintBottom_toBottomOf="@id/icon_res_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/icon_res_name" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_close"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:text="@string/action_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_name_card" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>